# zephyr_car

./: CMakeLists.txt  Doxyfile  LICENSE  README.md  prj.conf  prj.conf.bak
boards/: esp32s3_devkitm.overlay  rpi_pico.overlay
dts/bindings/: ccd_sensor.yaml  encode_motor.yaml  lightsensor.yaml
src/: CCD_sensor.cpp  CCD_sensor.h  Light_sensor.cpp  Light_sensor.h  MiniPID.h  Motor.cpp  Motor.h  back.txt  debug_shell.cpp  light_sensor.cpp  light_sensor.h  main.cpp  motor.cpp  motor.h  storage.cpp  storage.h
